# OpenLooper2

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
agent/: MIDI_LOOPER_PLAN.md  STRUCTURE.md  design.md  requirements.md  tasks.md  workflow.md
plugin/: CMakeLists.txt
plugin/include/OpenLooper2/: ActiveNoteTracker.h  CircularAudioBuffer.h  LoopBufferManager.h  Looper.h  MidiLoopBuffer.h  MidiLooper.h  OverdubEngine.h  ParameterManager.h  PluginEditor.h  PluginProcessor.h  TransportController.h
plugin/source/: ActiveNoteTracker.cpp  CircularAudioBuffer.cpp  LoopBufferManager.cpp  Looper.cpp  MidiLoopBuffer.cpp  MidiLooper.cpp  OverdubEngine.cpp  ParameterManager.cpp  PluginEditor.cpp  PluginProcessor.cpp  TransportController.cpp
tests/: CMakeLists.txt  LoopBufferTest.cpp  LooperTest.cpp
